// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Catalog Item Card 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "rgba(20, 23, 26, 0.15)",
          "borderRadius": 5,
        },
        Object {
          "elevation": 4,
          "shadowColor": "#14171A",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 8,
        },
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="catalog2"
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
          }
        }
      >
        <View
          accessibilityIgnoresInvertColors={true}
          style={
            Array [
              Object {
                "height": "100%",
                "width": "100%",
              },
              Object {
                "height": 205,
                "width": 168,
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2FCoorpAcademy%2Fcontent-eyrolles%2Fcockpit-eyrolles%2Fdefault%2Fshutterstock_123603871-1-1545058448041.jpg&m=crop&q=90&w=336&h=410",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": undefined,
                  "width": undefined,
                },
                undefined,
              ]
            }
            testID="catalog2-image"
          />
          <BVLinearGradient
            colors={
              Array [
                0,
                1711276032,
                3003121664,
                4278190080,
              ]
            }
            endPoint={
              Object {
                "x": 0.5,
                "y": 1,
              }
            }
            locations={null}
            startPoint={
              Object {
                "x": 0.5,
                "y": 0,
              }
            }
            style={
              Array [
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "padding": 16,
                  },
                ],
                undefined,
              ]
            }
            testID="catalog2-image-gradient"
          >
            <View
              style={
                Object {
                  "position": "absolute",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderBottomEndRadius": 12,
                      "flex": 1,
                      "justifyContent": "center",
                      "paddingLeft": 8,
                      "paddingRight": 12,
                    },
                    Object {
                      "minHeight": 17,
                      "minWidth": 40,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {},
                      Array [
                        "New",
                        Object {
                          "fontSize": 10,
                          "fontWeight": "700",
                        },
                        Object {
                          "color": "#00B0FF",
                        },
                      ],
                    ]
                  }
                  testID="catalog2-badge"
                >
                  New
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "flex-end",
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={16}
                bbWidth={16}
                color="#FFFFFF"
                height={16}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    undefined,
                    null,
                    Object {
                      "flex": 0,
                      "height": 16,
                      "width": 16,
                    },
                  ]
                }
                testID="infinite-catalog2"
                tintColor="#FFFFFF"
                vbHeight={46}
                vbWidth={46}
                width={16}
              >
                <RNSVGGroup
                  fill={
                    Array [
                      0,
                      4278190080,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  font={Object {}}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={Array []}
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                >
                  <RNSVGPath
                    d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
                    fill={
                      Array [
                        0,
                        4294967295,
                      ]
                    }
                    fillOpacity={1}
                    fillRule={1}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                    opacity={1}
                    originX={0}
                    originY={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                    rotation={0}
                    scaleX={1}
                    scaleY={1}
                    skewX={0}
                    skewY={0}
                    stroke={null}
                    strokeDasharray={null}
                    strokeDashoffset={null}
                    strokeLinecap={0}
                    strokeLinejoin={0}
                    strokeMiterlimit={4}
                    strokeOpacity={1}
                    strokeWidth={1}
                    vectorEffect={0}
                    x={0}
                    y={0}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontWeight": "700",
                        "paddingTop": 8,
                      },
                      Object {
                        "fontSize": 15,
                      },
                    ],
                  ]
                }
                testID="title-catalog2"
              >
                Predicting the future
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "flex": 1,
                          "fontWeight": "400",
                          "paddingBottom": 16,
                          "paddingTop": 8,
                        },
                        Object {
                          "fontSize": 12,
                        },
                      ],
                    ]
                  }
                  testID="subtitle-catalog2"
                >
                  Coorpacademy
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "paddingLeft": 8,
                      },
                      Object {
                        "marginTop": -7,
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight={14}
                    bbWidth={14}
                    color="#FFFFFF"
                    height={14}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        undefined,
                        null,
                        Object {
                          "flex": 0,
                          "height": 14,
                          "width": 14,
                        },
                      ]
                    }
                    testID="certified-catalog2"
                    tintColor="#FFFFFF"
                    vbHeight={24}
                    vbWidth={24}
                    width={14}
                  >
                    <RNSVGGroup
                      fill={
                        Array [
                          0,
                          4278190080,
                        ]
                      }
                      fillOpacity={1}
                      fillRule={1}
                      font={Object {}}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={Array []}
                      rotation={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      x={0}
                      y={0}
                    >
                      <RNSVGPath
                        d="M0 .001h24v24H0z"
                        fill={null}
                        fillOpacity={1}
                        fillRule={1}
                        matrix={
                          Array [
                            1,
                            0,
                            0,
                            1,
                            0,
                            0,
                          ]
                        }
                        opacity={1}
                        originX={0}
                        originY={0}
                        propList={
                          Array [
                            "fill",
                          ]
                        }
                        rotation={0}
                        scaleX={1}
                        scaleY={1}
                        skewX={0}
                        skewY={0}
                        stroke={null}
                        strokeDasharray={null}
                        strokeDashoffset={null}
                        strokeLinecap={0}
                        strokeLinejoin={0}
                        strokeMiterlimit={4}
                        strokeOpacity={1}
                        strokeWidth={1}
                        vectorEffect={0}
                        x={0}
                        y={0}
                      />
                      <RNSVGPath
                        d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
                        fill={
                          Array [
                            0,
                            4294967295,
                          ]
                        }
                        fillOpacity={1}
                        fillRule={1}
                        matrix={
                          Array [
                            1,
                            0,
                            0,
                            1,
                            0,
                            0,
                          ]
                        }
                        opacity={1}
                        originX={0}
                        originY={0}
                        propList={
                          Array [
                            "fill",
                          ]
                        }
                        rotation={0}
                        scaleX={1}
                        scaleY={1}
                        skewX={0}
                        skewY={0}
                        stroke={null}
                        strokeDasharray={null}
                        strokeDashoffset={null}
                        strokeLinecap={0}
                        strokeLinejoin={0}
                        strokeMiterlimit={4}
                        strokeOpacity={1}
                        strokeWidth={1}
                        vectorEffect={0}
                        x={0}
                        y={0}
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
              <View
                style={
                  Object {
                    "borderRadius": 3,
                    "overflow": "hidden",
                  }
                }
                testID="progressBar-catalog2"
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#FFFFFF",
                    }
                  }
                  testID="progression-bar"
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#00B0FF",
                        "borderBottomRightRadius": 1,
                        "borderTopRightRadius": 1,
                        "height": 2,
                        "width": "30%",
                      }
                    }
                    testID="progression-bar-3"
                  />
                </View>
              </View>
            </View>
          </BVLinearGradient>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginVertical": 24,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Array [
                Object {},
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "textAlign": "center",
                    "textShadowColor": "rgba(0, 0, 0, 1)",
                    "textShadowRadius": 2,
                  },
                  Object {
                    "fontSize": 10,
                    "letterSpacing": 1.88,
                  },
                ],
              ]
            }
            testID="author-catalog2"
          >
            CUSTOM EDITOR
             CREATION
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Card Catalog Item Cover 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "rgba(20, 23, 26, 0.15)",
          "borderRadius": 5,
        },
        Object {
          "elevation": 4,
          "shadowColor": "#14171A",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 8,
        },
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="catalog1"
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
          }
        }
      >
        <View
          accessibilityIgnoresInvertColors={true}
          style={
            Array [
              Object {
                "height": "100%",
                "width": "100%",
              },
              Object {
                "height": 400.2,
                "minHeight": 215,
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2FCoorpAcademy%2Fcontent-eyrolles%2Fcockpit-eyrolles%2Fdefault%2Fshutterstock_123603871-1-1545058448041.jpg&m=crop&q=90&h=800",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": undefined,
                  "width": undefined,
                },
                undefined,
              ]
            }
            testID="catalog1-image"
          />
          <BVLinearGradient
            colors={
              Array [
                0,
                1711276032,
                3003121664,
                4278190080,
              ]
            }
            endPoint={
              Object {
                "x": 0.5,
                "y": 1,
              }
            }
            locations={null}
            startPoint={
              Object {
                "x": 0.5,
                "y": 0,
              }
            }
            style={
              Array [
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "padding": 24,
                  },
                ],
                undefined,
              ]
            }
            testID="catalog1-image-gradient"
          >
            <View
              style={
                Object {
                  "position": "absolute",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderBottomEndRadius": 12,
                      "flex": 1,
                      "justifyContent": "center",
                      "paddingLeft": 8,
                      "paddingRight": 12,
                    },
                    Object {
                      "minHeight": 20,
                      "minWidth": 45,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {},
                      Array [
                        "New",
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                        },
                        Object {
                          "color": "#00B0FF",
                        },
                      ],
                    ]
                  }
                  testID="catalog1-badge"
                >
                  New
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "flex-end",
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={22}
                bbWidth={22}
                color="#FFFFFF"
                height={22}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    undefined,
                    null,
                    Object {
                      "flex": 0,
                      "height": 22,
                      "width": 22,
                    },
                  ]
                }
                testID="infinite-catalog1"
                tintColor="#FFFFFF"
                vbHeight={46}
                vbWidth={46}
                width={22}
              >
                <RNSVGGroup
                  fill={
                    Array [
                      0,
                      4278190080,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  font={Object {}}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={Array []}
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                >
                  <RNSVGPath
                    d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
                    fill={
                      Array [
                        0,
                        4294967295,
                      ]
                    }
                    fillOpacity={1}
                    fillRule={1}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                    opacity={1}
                    originX={0}
                    originY={0}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                    rotation={0}
                    scaleX={1}
                    scaleY={1}
                    skewX={0}
                    skewY={0}
                    stroke={null}
                    strokeDasharray={null}
                    strokeDashoffset={null}
                    strokeLinecap={0}
                    strokeLinejoin={0}
                    strokeMiterlimit={4}
                    strokeOpacity={1}
                    strokeWidth={1}
                    vectorEffect={0}
                    x={0}
                    y={0}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontWeight": "700",
                        "paddingTop": 8,
                      },
                      Object {
                        "fontSize": 22,
                      },
                    ],
                  ]
                }
                testID="title-catalog1"
              >
                Predicting the future
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {},
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "flex": 1,
                          "fontWeight": "400",
                          "paddingBottom": 16,
                          "paddingTop": 8,
                        },
                        Object {
                          "fontSize": 15,
                        },
                      ],
                    ]
                  }
                  testID="subtitle-catalog1"
                >
                  Coorpacademy
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "paddingLeft": 8,
                      },
                      Object {
                        "marginTop": -8,
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight={16}
                    bbWidth={16}
                    color="#FFFFFF"
                    height={16}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        undefined,
                        null,
                        Object {
                          "flex": 0,
                          "height": 16,
                          "width": 16,
                        },
                      ]
                    }
                    testID="certified-catalog1"
                    tintColor="#FFFFFF"
                    vbHeight={24}
                    vbWidth={24}
                    width={16}
                  >
                    <RNSVGGroup
                      fill={
                        Array [
                          0,
                          4278190080,
                        ]
                      }
                      fillOpacity={1}
                      fillRule={1}
                      font={Object {}}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={Array []}
                      rotation={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      x={0}
                      y={0}
                    >
                      <RNSVGPath
                        d="M0 .001h24v24H0z"
                        fill={null}
                        fillOpacity={1}
                        fillRule={1}
                        matrix={
                          Array [
                            1,
                            0,
                            0,
                            1,
                            0,
                            0,
                          ]
                        }
                        opacity={1}
                        originX={0}
                        originY={0}
                        propList={
                          Array [
                            "fill",
                          ]
                        }
                        rotation={0}
                        scaleX={1}
                        scaleY={1}
                        skewX={0}
                        skewY={0}
                        stroke={null}
                        strokeDasharray={null}
                        strokeDashoffset={null}
                        strokeLinecap={0}
                        strokeLinejoin={0}
                        strokeMiterlimit={4}
                        strokeOpacity={1}
                        strokeWidth={1}
                        vectorEffect={0}
                        x={0}
                        y={0}
                      />
                      <RNSVGPath
                        d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
                        fill={
                          Array [
                            0,
                            4294967295,
                          ]
                        }
                        fillOpacity={1}
                        fillRule={1}
                        matrix={
                          Array [
                            1,
                            0,
                            0,
                            1,
                            0,
                            0,
                          ]
                        }
                        opacity={1}
                        originX={0}
                        originY={0}
                        propList={
                          Array [
                            "fill",
                          ]
                        }
                        rotation={0}
                        scaleX={1}
                        scaleY={1}
                        skewX={0}
                        skewY={0}
                        stroke={null}
                        strokeDasharray={null}
                        strokeDashoffset={null}
                        strokeLinecap={0}
                        strokeLinejoin={0}
                        strokeMiterlimit={4}
                        strokeOpacity={1}
                        strokeWidth={1}
                        vectorEffect={0}
                        x={0}
                        y={0}
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
              <View
                style={
                  Object {
                    "borderRadius": 3,
                    "overflow": "hidden",
                  }
                }
                testID="progressBar-catalog1"
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#FFFFFF",
                    }
                  }
                  testID="progression-bar"
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#00B0FF",
                        "borderBottomRightRadius": 1,
                        "borderTopRightRadius": 1,
                        "height": 2,
                        "width": "30%",
                      }
                    }
                    testID="progression-bar-3"
                  />
                </View>
              </View>
            </View>
          </BVLinearGradient>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginVertical": 24,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Array [
                Object {},
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "textAlign": "center",
                    "textShadowColor": "rgba(0, 0, 0, 1)",
                    "textShadowRadius": 2,
                  },
                  Object {
                    "fontSize": 12,
                    "letterSpacing": 2.25,
                  },
                ],
              ]
            }
            testID="author-catalog1"
          >
            CUSTOM
             CREATION
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Card Correction 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        undefined,
        undefined,
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 24,
          },
          false,
          false,
          Object {
            "backgroundColor": "#FDD9DC",
          },
          false,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={23}
        bbWidth={23}
        color="#F73F52"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 23,
              "width": 23,
            },
            null,
            Object {
              "flex": 0,
              "height": 23,
              "width": 23,
            },
          ]
        }
        tintColor="#F73F52"
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4278190080,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        >
          <RNSVGPath
            d="M0 0h24v24H0z"
            fill={null}
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          />
          <RNSVGPath
            d="M12.042 22c-5.514 0-10-4.486-10-10s4.486-10 10-10 10 4.486 10 10-4.486 10-10 10zm0-18c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8z"
            fill={
              Array [
                0,
                4294393682,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          />
          <RNSVGPath
            d="M16.749 8.707l-1.415-1.414-3.292 3.293-3.293-3.293-1.415 1.414L10.627 12l-3.293 3.293 1.415 1.414 3.293-3.292 3.292 3.292 1.415-1.414L13.456 12z"
            fill={
              Array [
                0,
                4294393682,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {},
            Object {
              "color": "#546E7A",
              "fontSize": 17,
              "fontWeight": "700",
              "paddingLeft": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Foo bar baz
      </Text>
    </View>
    <Text>
      A sponsored post is a small advertising insert appearing in users’ timelines.
    </Text>
  </View>
</View>
`;

exports[`Storyshots Card Default Case 1`] = `null`;

exports[`Storyshots Card Key point 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        undefined,
        undefined,
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 24,
          },
          false,
          Object {
            "backgroundColor": "#ffded4",
          },
          false,
          false,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={23}
        bbWidth={23}
        color="#ff7043"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 23,
              "width": 23,
            },
            null,
            Object {
              "flex": 0,
              "height": 23,
              "width": 23,
            },
          ]
        }
        tintColor="#ff7043"
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4278190080,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        >
          <RNSVGPath
            d="M0 .001h24v24H0z"
            fill={null}
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          />
          <RNSVGPath
            d="M20.292 10.364l1.414-1.414-2.474-2.475 1.413-1.413-2.121-2.121-9.489 9.491a4.973 4.973 0 0 0-1.918-.43L7.002 12c-2.694 0-4.937 2.19-5 4.881a4.966 4.966 0 0 0 1.38 3.57 4.964 4.964 0 0 0 3.5 1.548l.121.001c2.69 0 4.931-2.189 4.995-4.881a4.964 4.964 0 0 0-.719-2.69l3.71-3.711 2.474 2.476 1.415-1.414-2.474-2.476 1.414-1.415 2.474 2.475zM7 19a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
            fill={
              Array [
                0,
                4294930499,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {},
            Object {
              "color": "#546E7A",
              "fontSize": 17,
              "fontWeight": "700",
              "paddingLeft": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Foo bar baz
      </Text>
    </View>
    <Text>
      A sponsored post is a small advertising insert appearing in users’ timelines.
    </Text>
  </View>
</View>
`;

exports[`Storyshots Card Tip 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        undefined,
        undefined,
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 24,
          },
          Object {
            "backgroundColor": "#fff8c5",
          },
          false,
          false,
          false,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={21}
        bbWidth={21}
        color="#ffc035"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 21,
              "width": 21,
            },
            null,
            Object {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        tintColor="#ffc035"
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4278190080,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4294950965,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M9 23h2v1h2v-1h2v-2H9z"
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={0}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fillRule",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M12 5c3.9 0 7 3.1 7 7 0 2.7-1.6 5.2-4 6.3v.7c0 .6-.4 1-1 1h-4c-.6 0-1-.4-1-1v-.7c-2.4-1.1-4-3.6-4-6.3 0-3.9 3.1-7 7-7z"
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M11 0h2v4h-2zM0 11h4v2H0zM20 11h4v2h-4zM17.308 5.277l2.97-2.97 1.414 1.414-2.97 2.97zM2.308 3.722l1.414-1.414 2.97 2.97-1.414 1.414z"
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={0}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fillRule",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {},
            Object {
              "color": "#546E7A",
              "fontSize": 17,
              "fontWeight": "700",
              "paddingLeft": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Foo bar baz
      </Text>
    </View>
    <Text>
      A sponsored post is a small advertising insert appearing in users’ timelines.
    </Text>
  </View>
</View>
`;
